# Amazon-Image-matcher

./: .gitignore  README.md  README.txt  VGG.py  VGG_usage.ipynb  dataset_exploration.ipynb  embedder.ipynb  image classifiers.py  image_classifiction.py  image_classifier.py  main.ipynb  main.py  pyproject.toml  requirements.txt  testing_classifier.py  text_evaluation.py
.devcontainer/: Dockerfile  devcontainer.json
imager/: app.py  bottle.npy  clusters.py  dataset_exploration.ipynb  embedder.ipynb  evaluation.ipynb  file_names.txt  frog.npy  image_classifiction.py  image_classifier.py  main.py  model.py  model_testing.ipynb  testing_classifier.py  text_evaluation.py
images/: Air Conditioners.hdf5  All Exercise and Fitness.hdf5  All Home and Kitchen.hdf5  All Pet Supplies.hdf5  Amazon Fashion.hdf5  Baby Bath Skin and Grooming.hdf5  Baby Fashion.hdf5  Baby Products.hdf5  Backpacks.hdf5  Badminton.hdf5  Ballerinas.hdf5  Beauty and Grooming.hdf5  Bedroom Linen.hdf5  Camping and Hiking.hdf5  Car Accessories.hdf5  Car Electronics.hdf5  Car and Bike Care.hdf5  Cardio Equipment.hdf5  Coffee Tea and Beverages.hdf5  Cycling.hdf5  Diet and Nutrition.hdf5  Dog supplies.hdf5  Fashion Sales and Deals.hdf5  Fashion Sandals.hdf5  Fitness Accessories.hdf5  Furniture.hdf5  Health and Personal Care.hdf5  Home Audio and Theater.hdf5  Home Furnishing.hdf5  Home Improvement.hdf5  Indoor Lighting.hdf5  International Toy Store.hdf5  Janitorial and Sanitation Supplies.hdf5  Kids Clothing.hdf5  Kids Watches.hdf5  Luxury Beauty.hdf5  Nursing and Feeding.hdf5  Personal Care Appliances.hdf5  (+14 more)
(+64 files in other folders)
